--- a/cookies/app/views/cookie_types/show.html.erb
+++ b/cookies/app/views/cookie_types/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%=link_to "show all cookies", cookie_types_path %>
 <p>
   <strong>Name:</strong>
   <%= @cookie_type.name %>
